--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "opn": "^5.4.0",
     "postcss-loader": "^1.3.3",
     "preact": "^8.5.3",
-    "preact-compat": "^3.19.0",
     "prettier": "^1.14.3",
     "raf": "^3.4.0",
     "react-addons-test-utils": "^15.6.2",
@@ -89,10 +88,10 @@
     "enquire.js": "^2.1.6",
     "json2mq": "^0.2.0",
     "lodash.debounce": "^4.0.8",
-    "resize-observer-polyfill": "^1.5.0"
+    "resize-observer-polyfill": "^1.5.0",
+    "preact-compat": "^3.19.0"
   },
   "peerDependencies": {
-    "preact-compat": "^3.19.0",
     "preact": "^8.5.3"
   },
   "jest": {
