--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "js-beautify": "^1.7.5",
     "json-loader": "^0.5.4",
     "lint-staged": "^7.0.3",
-    "node-sass": "^4.5.2",
     "opn": "^5.4.0",
     "postcss-loader": "^1.3.3",
     "preact": "^8.5.3",
@@ -73,12 +72,12 @@
     "raf": "^3.4.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.0.0",
-    "sass-loader": "^6.0.3",
     "sinon": "^2.1.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.16.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.21.0",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
     "why-did-you-update": "^0.1.1"
@@ -88,8 +87,8 @@
     "enquire.js": "^2.1.6",
     "json2mq": "^0.2.0",
     "lodash.debounce": "^4.0.8",
-    "resize-observer-polyfill": "^1.5.0",
-    "preact-compat": "^3.19.0"
+    "preact-compat": "^3.19.0",
+    "resize-observer-polyfill": "^1.5.0"
   },
   "peerDependencies": {
     "preact": "^8.5.3"
